--- a/app/globals.css
+++ b/app/globals.css
@@ -2,4 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
+@font-face {
+    font-family: Rubik;
+    font-display: swap;
+    src: url(./fonts/Rubik-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: Montserrat;
+    font-display: swap;
+    src: url(./fonts/Montserrat-VariableFont_wght.ttf);
+}
